# chemistry

./: README.md  pyproject.toml
chemistry/: __init__.py  utils.py
chemistry/elements/: electron_config.py  element.py  table.py
